--- a/Module_3/src/main/resources/templates/monthly-books/view.html
+++ b/Module_3/src/main/resources/templates/monthly-books/view.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Bookclub | Welcome</title>
+    <title>Bookclub | View Monthly Book</title>
     <!-- Bootstrap Stylesheet CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -17,24 +17,22 @@
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Book Club</h1>
-            <p class="lead text-muted">
-              Welcome to the Book Club app, your "one stop shop" for all of your
-              book club needs. Below you will find a list of this month's top 10
-              favorite books. Select the book to see its details.
-            </p>
-            <div class="col" th:each="book : ${books}">
-              <span th:text="${book.getTitle()}"></span><br />
-              <small class="text-muted">
-                <em th:text="${book.getDescription()}"> </em>
-              </small>
-              <div class="btn-group">
-                <a
-                  href="#"
-                  th:href="@{/{id}(id=${book.getIsbn()})}"
-                  class="btn btn-sm btn-outline-secondary"
-                  >View</a
+            <h1 class="fw-light">View Monthly Book</h1>
+            <div class="card" style="width: 100%">
+              <div class="card-body">
+                <h5 class="card-title" th:text="${book.getTitle()}"></h5>
+                <strong>Description</strong>
+                <p class="card-text" th:text="${book.getDescription()}"></p>
+                <strong>ISBN</strong>
+                <p class="card-text" th:text="${book.getIsbn()}"></p>
+                <strong>Authors</strong>
+                <ul
+                  style="list-style-type: none"
+                  th:each="author : ${book.getAuthors()}"
                 >
+                  <li th:text="${author}"></li>
+                </ul>
+                <a href="/" class="btn btn-primary">Return Home</a>
               </div>
             </div>
           </div>
