--- a/Module_4/src/main/resources/templates/fragments/header.html
+++ b/Module_4/src/main/resources/templates/fragments/header.html
@@ -29,6 +29,11 @@
                   >Contact Us</a
                 >
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/wishlist" th:href="@{/wishlist}"
+                  >Wishlist</a
+                >
+              </li>
             </ul>
           </div>
         </div>
